--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,8 @@
-DATABASE_USER=test
-DATABASE_PASSWORD=test
+DATABASE_TYPE=postgres
+DATABASE_URL=localhost
+DATABASE_USER=nest
+DATABASE_PASSWORD=nest
+DATABASE_NAME=nest
+DATABASE_PORT=5432
+DATABASE_ORM_SYNC=true
 JWT_SECRET=updateme
