--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -21,6 +21,7 @@ lerna-debug.log*
 
 # IDEs and editors
 /.idea
+.history
 .project
 .classpath
 .c9/
@@ -41,7 +42,6 @@ lerna-debug.log*
 .env.test.local
 .env.production.local
 .env.local
-.env.prod
 
 # temp directory
 .temp
