--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -6,3 +6,7 @@ DATABASE_NAME=nest
 DATABASE_PORT=5432
 DATABASE_ORM_SYNC=true
 JWT_SECRET=updateme
+JWT_EXPIRES_IN=1h
+ADMIN_EMAIL=admin@admin.com
+ADMIN_PASSWORD=admin
+BCRYPT_SALT_ROUNDS=10
