--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,15 @@
 {
-  "eslint.workingDirectories": [
-    "./backend",
-    "./frontend"
-  ],
-    "files.exclude": {
+  "eslint.workingDirectories": ["./backend", "./frontend"],
+  "files.exclude": {
     "**/node_modules": true,
     "backend/node_modules": true,
     "frontend/node_modules": true
   },
   "search.exclude": {
     "**/node_modules": true
-  }
+  },
+  "editor.tabSize": 2,
+  "eslint.enable": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true
 }
