--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,39 +5,37 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
-    "test:unit": "vitest",
-    "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
-    "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "@vuepic/vue-datepicker": "^10.0.0",
-    "pinia": "^2.3.0",
-    "vite-plugin-vuetify": "^2.0.4",
+    "@vuepic/vue-datepicker": "^11.0.1",
+    "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vuetify": "^3.7.6"
+    "vuetify": "^3.7.9"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
+    "@tsconfig/node22": "^22.0.0",
+    "@types/node": "^22.10.7",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitest/eslint-plugin": "1.1.20",
     "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/test-utils": "^2.4.6",
-    "cypress": "^13.17.0",
-    "eslint": "^9.14.0",
-    "eslint-plugin-cypress": "^4.1.0",
-    "eslint-plugin-vue": "^9.30.0",
-    "jsdom": "^25.0.1",
-    "prettier": "^3.3.3",
-    "sass-embedded": "^1.83.0",
-    "start-server-and-test": "^2.0.9",
-    "vite": "^6.0.5",
-    "vite-plugin-vue-devtools": "^7.6.8",
-    "vitest": "^2.1.8"
+    "@vue/eslint-config-typescript": "^14.3.0",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.18.0",
+    "eslint-plugin-vue": "^9.32.0",
+    "jiti": "^2.4.2",
+    "npm-run-all2": "^7.0.2",
+    "prettier": "^3.4.2",
+    "sass-embedded": "^1.83.4",
+    "typescript": "~5.7.3",
+    "vite": "^6.0.11",
+    "vite-plugin-vue-devtools": "^7.7.0",
+    "vue-tsc": "^2.2.0"
   }
 }
