--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -9,11 +9,14 @@
     "eslint.config.*"
   ],
   "compilerOptions": {
-    "noEmit": true,
+    "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
     "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "types": ["node"]
+    "moduleResolution": "bundler",
+    "types": ["node"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["../src/*"]
+    }
   }
 }
