--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,15 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@vuepic/vue-datepicker": "^11.0.1",
+    "axios": "^1.7.9",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vuetify": "^3.7.9"
+    "vuetify": "^3.7.0-beta.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/axios": "^0.14.4",
     "@types/node": "^22.10.7",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.1.0",
@@ -32,10 +34,13 @@
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
     "prettier": "^3.4.2",
+    "sass": "^1.83.4",
     "sass-embedded": "^1.83.4",
-    "typescript": "~5.7.3",
+    "sass-loader": "^16.0.4",
+    "typescript": "^5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0",
+    "vite-plugin-vuetify": "^2.0.4",
     "vue-tsc": "^2.2.0"
   }
 }
