improving auth and refresh token

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -6,7 +6,8 @@ DATABASE_NAME=nest
 DATABASE_PORT=5432
 DATABASE_ORM_SYNC=true
 JWT_SECRET=updateme
-JWT_EXPIRES_IN=1h
+JWT_EXPIRES_IN=10m
+JWT_REFRESH_EXPIRES="20m"
 ADMIN_EMAIL=admin@admin.com
 ADMIN_PASSWORD=admin
 BCRYPT_SALT_ROUNDS=10
