--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -20,6 +20,6 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts"],  
+  "include": ["src/**/*.ts", "@types"],
   "exclude": ["node_modules"]
 }
