--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "tsc --noEmit --watch  && vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build",
+    "type-check": "vue-tsc --build --noEmit",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@iconify/vue": "^4.3.0",
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
     "pinia": "^2.3.1",
