--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@iconify/vue": "^4.3.0",
+    "@vue/runtime-dom": "^3.5.13",
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
     "pinia": "^2.3.1",
@@ -25,10 +26,11 @@
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/axios": "^0.14.4",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.3.0",
+    "@vue/runtime-core": "^3.5.13",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
