--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -1,14 +1,19 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "@types/*.d.ts", "shims-vue.d.ts"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "@types/*.d.ts"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "strict": true,
     "composite": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
+    "types": ["node"],
     "paths": {
       "@/*": ["./src/*"]
-    },
-    "types": ["vue"]
+    }
   }
 }
