--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,16 +1,11 @@
 {
-  "files": ["./shims-vue.d.ts"],
-  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.app.json" }],
-  "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
-    "lib": ["ES2020", "DOM", "ESNext"],
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
     },
-    "types": ["vite/client"],
-    "moduleResolution": "bundler"
-  },
-  "include": ["src"]
+    {
+      "path": "./tsconfig.app.json"
+    }
+  ]
 }
