--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,6 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
-
     "@nestjs/typeorm": "^11.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/passport-local": "^1.0.38",
@@ -47,6 +46,7 @@
     "rxjs": "^7.8.1",
     "sanitize-html": "^2.14.0",
     "typeorm": "^0.3.20",
+    "ulid": "^3.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
