--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,19 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@apollo/client": "^3.14.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@graphql-codegen/cli": "^5.0.7",
+    "@graphql-codegen/introspection": "^4.0.3",
+    "@graphql-codegen/typescript": "^4.1.6",
+    "@graphql-codegen/typescript-operations": "^4.6.1",
+    "@graphql-codegen/typescript-vue-apollo": "^4.1.2",
     "@iconify/vue": "^4.3.0",
+    "@vue/apollo-composable": "^4.2.2",
     "@vue/runtime-dom": "^3.5.13",
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.9",
+    "graphql": "^16.11.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
