--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -18,7 +18,10 @@
     "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@/*": ["src/*"]
+    },
   },
   "include": ["src/**/*.ts", "@types"],
   "exclude": ["node_modules"]
