--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "dev": "nest start --watch",
     "start:debug": "NODE_ENV=development nest start --debug --watch",
     "start:prod": "node dist/main",
     "seed": "SEED=true ts-node -r tsconfig-paths/register src/seed.ts",
