--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -1,6 +1,7 @@
 overwrite: true
 schema: "http://localhost:3000/graphql"
-documents: "src/**/*.graphql"
+documents:
+  - "src/graphql/**/*.graphql"
 generates:
   src/generated/graphql.ts:
     plugins:
