--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "run-p type-check && vite",
+    "dev:nocheck": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -29,6 +30,7 @@
     "graphql": "^16.11.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.5.0",
     "vuetify": "^3.9.3"
   },
