--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "dev": "nest start --watch",
     "start:debug": "NODE_ENV=development nest start --debug --watch",
     "start:prod": "node dist/main",
+    "dev:safe": "bash -lc 'if lsof -iTCP:3000 -sTCP:LISTEN -P -n >/dev/null; then echo \"Backend already running on port 3000\"; else npm run start:dev; fi'",
     "seed": "SEED=true ts-node -r tsconfig-paths/register src/seed.ts",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
