--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -2,6 +2,7 @@ overwrite: true
 schema: "http://localhost:3000/graphql"
 documents:
   - "src/graphql/**/*.graphql"
+  - "!src/graphql/queries/error.graphql"
 generates:
   src/generated/graphql.ts:
     plugins:
