--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,16 @@
-FROM node:22.17.1-alpine
+FROM node:22.17.1-alpine AS builder
 
 WORKDIR /app
 COPY package*.json ./
+RUN npm ci
+COPY . .
+RUN npm run build
+
+FROM node:22.17.1-alpine AS runner
+WORKDIR /app
+COPY package*.json ./
 RUN npm ci --omit=dev
+COPY --from=builder /app/dist ./dist
 COPY . .
 EXPOSE 3000
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "start:prod"]
