--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -20,38 +20,9 @@ env:
   ECS_SERVICE: backend-service
   ECS_task: backend-task
 
-jobs:
-  build-and-push:
-    name: Build and Push to Amazon ECR
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials using OIDC
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/${{ env.ROLE_NAME }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Build, tag, and push image to Amazon ECR
-        run: |
-          cd backend
-          IMAGE_TAG=${{ github.sha }}
-          REGISTRY=${{ steps.login-ecr.outputs.registry }}
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push $REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $REGISTRY/$ECR_REPOSITORY:latest
-          docker push $REGISTRY/$ECR_REPOSITORY:latest
-          
-  deploy:
-    name: Deploy to Amazon ECS
+jobs:          
+  build-and-deploy:
+    name: Build and deploy to Amazon ECS
     runs-on: ubuntu-latest
     needs: build-and-push
 
@@ -79,14 +50,19 @@ jobs:
 
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
-
           echo "image=$IMAGE_URI" >> $GITHUB_OUTPUT
+
+          docker tag $ECR_REPOSITORY:$IMAGE_TAG $REGISTRY/$ECR_REPOSITORY:latest
+          docker push $REGISTRY/$ECR_REPOSITORY:latest
+
+      - name: Prepare ECS task definition
+        run: |
+          mkdir -p .aws
+          sed "s|<IMAGE_URI>|${{ steps.build-image.outputs.image }}|g" .aws/backend-task-definition.json > .aws/final-task-definition.json
 
       - name: Deploy to Amazon ECS
         uses: aws-actions/amazon-ecs-deploy-task-definition@v2
         with:
           task-definition: .aws/backend-task-definition.json
-          container-name: backend
-          image: ${{ steps.build-image.outputs.image }}
           cluster: ${{ env.ECS_CLUSTER }}
           service: ${{ env.ECS_SERVICE }}
