--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -24,7 +24,6 @@ jobs:
   build-and-deploy:
     name: Build and deploy to Amazon ECS
     runs-on: ubuntu-latest
-    needs: build-and-push
 
     steps:
       - name: Checkout code
@@ -50,10 +49,12 @@ jobs:
 
           docker build -t $IMAGE_URI .
           docker push $IMAGE_URI
-          echo "image=$IMAGE_URI" >> $GITHUB_OUTPUT
-
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $REGISTRY/$ECR_REPOSITORY:latest
+          
+          docker tag $IMAGE_URI $REGISTRY/$ECR_REPOSITORY:latest
           docker push $REGISTRY/$ECR_REPOSITORY:latest
+
+          docker rmi $IMAGE_URI $REGISTRY/$ECR_REPOSITORY:latest || true
+          echo "image=$IMAGE_URI" >> $GITHUB_OUTPUT
 
       - name: Prepare ECS task definition
         run: |
