--- a/backend/package.json
+++ b/backend/package.json
@@ -51,6 +51,9 @@
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
     "dotenv": "^16.4.5",
+    "nestjs-pino": "^4.0.0",
+    "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.27",
