--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -4,14 +4,25 @@ on:
   push:
     branches: ["main"]
   workflow_dispatch:
+    inputs:
+      source_tag:
+        description: "Tag de origem para promoção"
+        required: false
+        default: "stag"
+      target_tag:
+        description: "Tag de destino (promoção)"
+        required: false
+        default: "prod"
 
 permissions:
+  id-token: write
   contents: read
 
 env:
-  AZURE_LOCATION: westeurope
   PREFIX: promozone
   IMAGE_NAME: promozone-backend
+  PROD_TAG: prod
+  STAG_TAG: stag
 
 jobs:
   build-and-push:
@@ -32,7 +43,9 @@ jobs:
       - name: Azure login
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Azure CLI - Fetch ACR info
         id: acr
@@ -44,33 +57,40 @@ jobs:
 
       - name: ACR login
         run: |
-          # Usa ACR privado sem credenciais de admin; login via Azure CLI com SP
           az acr login --name "${{ env.PREFIX }}acr"
 
       - name: Tag and push image to ACR
         run: |
           LOGIN_SERVER='${{ steps.acr.outputs.login_server }}'
-          docker tag $IMAGE_NAME:latest $LOGIN_SERVER/$IMAGE_NAME:latest
-          docker push $LOGIN_SERVER/$IMAGE_NAME:latest
+          GIT_SHA=${GITHUB_SHA::7}
+          docker tag $IMAGE_NAME:latest $LOGIN_SERVER/$IMAGE_NAME:${{ env.STAG_TAG }}
+          docker tag $IMAGE_NAME:latest $LOGIN_SERVER/$IMAGE_NAME:$GIT_SHA
+          docker push $LOGIN_SERVER/$IMAGE_NAME:${{ env.STAG_TAG }}
+          docker push $LOGIN_SERVER/$IMAGE_NAME:$GIT_SHA
 
-  deploy:
+  promote:
     runs-on: ubuntu-latest
-    needs: build-and-push
+    if: github.event_name == 'workflow_dispatch'
     steps:
       - name: Azure login
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Deploy to Container Apps
+      - name: Azure CLI - Fetch ACR info
+        id: acr
         run: |
           RG="${{ env.PREFIX }}-rg"
-          ENV_NAME="${{ env.PREFIX }}-cae"
-          APP_NAME="${{ env.PREFIX }}-ca-backend"
           ACR_NAME="${{ env.PREFIX }}acr"
           LOGIN_SERVER=$(az acr show --name "$ACR_NAME" --resource-group "$RG" --query loginServer -o tsv)
-          az extension add --name containerapp --upgrade
-          az containerapp update \
-            --resource-group "$RG" \
-            --name "$APP_NAME" \
-            --image "$LOGIN_SERVER/${{ env.IMAGE_NAME }}:latest"
+          echo "login_server=$LOGIN_SERVER" >> $GITHUB_OUTPUT
+
+      - name: Promote tag in ACR
+        run: |
+          LOGIN_SERVER='${{ steps.acr.outputs.login_server }}'
+          az acr import \
+            --name "${{ env.PREFIX }}acr" \
+            --source "$LOGIN_SERVER/${{ env.IMAGE_NAME }}:${{ inputs.source_tag }}" \
+            --image "${{ env.IMAGE_NAME }}:${{ inputs.target_tag }}"
