--- a/.github/workflows/azure-deploy.yml
+++ b/.github/workflows/azure-deploy.yml
@@ -24,6 +24,7 @@ env:
   PROD_TAG: prod
   STAG_TAG: stag
   ACR_NAME: promozone
+  RG: promozone-prod
 
 jobs:
   build-and-push:
@@ -51,7 +52,7 @@ jobs:
       - name: Azure CLI - Fetch ACR info
         id: acr
         run: |
-          LOGIN_SERVER=$(az acr show --name "${{ env.ACR_NAME }}" --query loginServer -o tsv || echo "${{ env.ACR_NAME }}.azurecr.io")
+          LOGIN_SERVER=$(az acr show --name "${{ env.ACR_NAME }}" --resource-group "${{ env.RG }}" --query loginServer -o tsv)
           echo "login_server=$LOGIN_SERVER" >> $GITHUB_OUTPUT
 
       - name: ACR login
@@ -71,17 +72,15 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'workflow_dispatch'
     steps:
-      - name: Azure login
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+      - name: Azure lo      client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Azure CLI - Fetch ACR info
         id: acr
         run: |
-          LOGIN_SERVER=$(az acr show --name "${{ env.ACR_NAME }}" --query loginServer -o tsv || echo "${{ env.ACR_NAME }}.azurecr.io")
+          RG="${{ env.PREFIX }}"
+          LOGIN_SERVER=$(az acr show --name "${{ env.ACR_NAME }}" --resource-group "${{ env.RG }}" --query loginServer -o tsv)
           echo "login_server=$LOGIN_SERVER" >> $GITHUB_OUTPUT
 
       - name: Promote tag in ACR
