--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -5,7 +5,7 @@ DATABASE_PASSWORD=nest
 DATABASE_NAME=nest
 DATABASE_PORT=5432
 DATABASE_ORM_SYNC=true
-DATABASE_SSL=true
+DATABASE_SSL=false
 JWT_SECRET=updateme
 JWT_EXPIRES_IN=10m
 JWT_REFRESH_EXPIRES="20m"
