--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,10 @@
     "migration:revert": "npm run typeorm -- -d ./src/data-source.ts migration:revert"
   },
   "dependencies": {
+    "@as-integrations/express5": "^1.1.2",
     "@apollo/server": "^5.0.0",
+    "express": "^5.2.1",
+    "cors": "^2.8.5",
     "@nestjs/apollo": "^13.2.1",
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
@@ -60,6 +63,7 @@
     "ulid": "^3.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@nestjs/cli": "^11.0.0",
